# lh-langchain-tut

./: .gitignore  cricket.txt  main.py  pyproject.toml
1.BasicLLM/: 1.gpt-oss.py
10.Retrievers/: 1.wikipediaretriever.py  2.vector_store_retriever.py
11.sql/: app.py
2.Prompts/: 1.static_prompt.py  2.dynamic_prompt.py  3.chat_prompt_template.py  4.project.py
3.structuredResults/: 1.typeddict.py  2.annotated_typeddict.py  3.pydantic.py  4.json_schema.py
4.outputParsers/: 1.stroutputparser.py  2.jsonParser.py  3.pydanticparser.py
5.Chains/: 1.simpleChain.py  2.sequentialchain.py  3.conditional_changes.py  4.parallel_chain.py  simpleChain.py
6.DocumentLoaders/: 1.text-loader.py  2.pdfloader.py  3.dirtectory_loader.py  4.webbase_loader.py  5.csv_loader.py
7.Textsplitter/: 1.character_splitter.py  2.recursive_character_splitter.py  3.pythoncode_splitter.py
8.embeddings/: 1.embedding.py  2.embedding_compare.py
9.vectordb/: 1.chromadb.py  2.faissvs.py
9.vectordb/chroma/: 1.chromadb.py
9.vectordb/chroma/chroma_langchain_db/: chroma.sqlite3
9.vectordb/chroma/youtube/: 1.query.py  2.persistent.py  3.persistent_query.py  4.metadata.py
9.vectordb/chroma/youtube/db/: chroma.sqlite3
9.vectordb/pgvector/: 1.pgvector.py
9.vectordb/quadrant/: client.py  dense.py
BasicLLM/: 1.gpt-oss.py
utils/: chat_prompt_template.py  json_parsing.py  prompt_template.py
