[project]
name = "lh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "pypdf>=6.10.2",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "rich>=14.3.3",
    "ruff>=0.15.9",
]
